add password encode and basic auth